// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandPickedPostsBlockControls matches snapshot when the edit mode is false 1`] = `
<BlockControls>
  <Toolbar
    controls={
      Array [
        Object {
          "icon": "edit",
          "isActive": false,
          "onClick": [Function],
          "title": "Edit",
        },
      ]
    }
  />
</BlockControls>
`;

exports[`HandPickedPostsBlockControls matches snapshot when the edit mode is true 1`] = `
<BlockControls>
  <Toolbar
    controls={
      Array [
        Object {
          "icon": "edit",
          "isActive": true,
          "onClick": [Function],
          "title": "Edit",
        },
      ]
    }
  />
</BlockControls>
`;
